Claude.md and fixed overlapping pics + new assets

--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ a {
     aspect-ratio: 566 / 708;
 }
 #pic-9 {
-    left: 220px; top: 4810px; width: 920px;
+    left: 80px; top: 4810px; width: 520px;
     aspect-ratio: 920 / 1150;
 }
 #pic-10 {
@@ -334,11 +334,11 @@ a {
     aspect-ratio: 447 / 559;
 }
 #pic-11 {
-    left: 106px; top: 5995px; width: 920px;
+    left: 680px; top: 5060px; width: 480px;
     aspect-ratio: 920 / 1150;
 }
 #pic-12 {
-    left: 106px; top: 5995px; width: 920px;
+    left: 106px; top: 5795px; width: 920px;
     aspect-ratio: 920 / 1150;
 }
 #pic-13 {
